--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -34,10 +34,12 @@
    <main class="main">
       <div id="task-1" class="licencing">
          <div class="licencing-header">
-            <div class="decor"></div>
-            <h4 class="pretitle">
-               Template Information
-            </h4>
+            <div class="pretitle-box">
+               <div class="decor"></div>
+               <h4 class="pretitle">
+                  Template Information
+               </h4>
+            </div>
             <h1 class="title">
                Licencing
             </h1>
