--- a/lesson_8/index.html
+++ b/lesson_8/index.html
@@ -247,6 +247,7 @@
             </div>
             <a href="#" class="fashion-link">Shop Now</a>
          </div>
+         <div class="fashion-box"></div>
       </div>
    </main>
 
