--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -257,37 +257,43 @@
          <h2 class="about-title work-title">How We Work</h2>
          <div class="work-box">
             <div class="work-item">
-               <h4 class="work-subtitle">Make Appointment</h4>
-               <div class="work-text">
-                  <p>
-                     Leverage agile frameworks provide
-                     synopsishigh level overviews
-                     value proposition.
-                  </p>
+               <div class="work-content">
+                  <h4 class="work-subtitle">Make Appointment</h4>
+                  <div class="work-text">
+                     <p>
+                        Leverage agile frameworks provide
+                        synopsishigh level overviews
+                        value proposition.
+                     </p>
+                  </div>
+                  <a href="#" class="work-link">Testimonials</a>
                </div>
-               <a href="#" class="work-link">Testimonials</a>
             </div>
             <div class="work-item">
-               <h4 class="work-subtitle">Consultation</h4>
-               <div class="work-text">
-                  <p>
-                     Leverage agile frameworks provide
-                     synopsishigh level overviews
-                     value proposition.
-                  </p>
+               <div class="work-content">
+                  <h4 class="work-subtitle">Consultation</h4>
+                  <div class="work-text">
+                     <p>
+                        Leverage agile frameworks provide
+                        synopsishigh level overviews
+                        value proposition.
+                     </p>
+                  </div>
+                  <a href="#" class="work-link">Testimonials</a>
                </div>
-               <a href="#" class="work-link">Testimonials</a>
             </div>
             <div class="work-item">
-               <h4 class="work-subtitle">Enjoy the Service</h4>
-               <div class="work-text">
-                  <p>
-                     Leverage agile frameworks provide
-                     synopsishigh level overviews
-                     value proposition.
-                  </p>
+               <div class="work-content">
+                  <h4 class="work-subtitle">Enjoy the Service</h4>
+                  <div class="work-text">
+                     <p>
+                        Leverage agile frameworks provide
+                        synopsishigh level overviews
+                        value proposition.
+                     </p>
+                  </div>
+                  <a href="#" class="work-link">Testimonials</a>
                </div>
-               <a href="#" class="work-link">Testimonials</a>
             </div>
          </div>
       </div>
@@ -295,24 +301,28 @@
       <div id="task-4" class="develop">
          <div class="develop-wrapper">
             <h2 class="develop-title">We Develop Create Custom Jewels.</h2>
-            <div class="develop-item">
-               <div class="develop-image">
-                  <img src="img/develop/01.jpeg" alt="Image">
-               </div>
-               <h4 class="develop-subtitle">Embossed hoop earrings</h4>
-               <span class="develop-price">$144.00</span>
-            </div>
-            <div class="develop-content">
-               <h3 class="develop-label">
-                  #02 <br> new jewellery collection
-               </h3>
+            <a href="#" class="develop-link">
                <div class="develop-item">
                   <div class="develop-image">
-                     <img src="img/develop/02.jpeg" alt="Image">
+                     <img src="img/develop/01.jpeg" alt="Image">
                   </div>
                   <h4 class="develop-subtitle">Embossed hoop earrings</h4>
                   <span class="develop-price">$144.00</span>
                </div>
+            </a>
+            <div class="develop-content">
+               <h3 class="develop-label">
+                  #02 <br> new jewellery collection
+               </h3>
+               <a href="#" class="develop-link">
+                  <div class="develop-item">
+                     <div class="develop-image">
+                        <img src="img/develop/02.jpeg" alt="Image">
+                     </div>
+                     <h4 class="develop-subtitle">Embossed hoop earrings</h4>
+                     <span class="develop-price">$144.00</span>
+                  </div>
+               </a>
             </div>
          </div>
       </div>
