--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -10,16 +10,17 @@
 
 <body>
    <div class="wrapper">
-      <header class="header">
+      <header class="header header--margin">
          <div class="header__container">
-            <a href="#" class="header__logo logo">
-               <img src="img/logo.svg" alt="Logo">
-            </a>
-            <div class="header__search search">
-               <span>Search</span>
+            <div class="header__box">
+               <a href="#" class="header__logo logo">
+                  <img src="img/logo.svg" alt="Logo">
+               </a>
+               <div class="header__search search">
+                  <span>Search</span>
+               </div>
             </div>
             <div class="header__auth">
-
                <div class="header__lang">
                   <span>English (united States)</span>
                   <ul class="header__list-lang lang-list">
@@ -28,8 +29,10 @@
                      <li class="lang-list__item">German (Germany)</li>
                   </ul>
                </div>
-               <a href="#" class="header__login login">Login</a>
-               <a href="#" class="header__signup signup">Sign Up</a>
+               <div class="header__buttons">
+                  <a href="#" class="header__login login">Login</a>
+                  <a href="#" class="header__signup signup">Sign Up</a>
+               </div>
             </div>
          </div>
       </header>
